<?xml version="1.0"?>
<package format="2">
  <name>rx1_teleop</name>
  <version>1.2.5</version>
  <description>
    rx1 teleop arm
  </description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>feetech_lib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>

